Add some comments

--- a/DDCM/1d/DDbar.ipynb
+++ b/DDCM/1d/DDbar.ipynb
@@ -141,6 +141,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "39972e2c",
+   "metadata": {},
+   "source": [
+    "Let's perform a first projection $z_1 = P_E(\\hat{z}_0)$, where $\\hat{z}_0$ was arbitrarily chosen in the middle of the database:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "3a3419a9-840d-49cf-82e6-b8103aec0e46",
@@ -168,6 +176,14 @@
     "            xytext=(eps_data[idx_mat],sig_data[idx_mat]),\n",
     "            arrowprops=dict(arrowstyle=\"->\",edgecolor=\"red\"))\n",
     "fig"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "660a2820",
+   "metadata": {},
+   "source": [
+    "This is then followed by a projection $\\hat{z}_1 = P_D(z_1)$:"
    ]
   },
   {
@@ -199,6 +215,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a3d5a062",
+   "metadata": {},
+   "source": [
+    "And a new projection $z_2 = P_E(\\hat{z}_1)$:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "5b27500a-ea0f-43c0-aeab-03a830f469ee",
@@ -225,6 +249,24 @@
     "            xytext=(eps_data[idx_new],sig_data[idx_new]),\n",
     "            arrowprops=dict(arrowstyle=\"->\",edgecolor=\"red\"))\n",
     "fig"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42e6d221",
+   "metadata": {},
+   "source": [
+    "## Minimization of a constitutive distance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4fb0d0cd",
+   "metadata": {},
+   "source": [
+    "The following constitutive distance can be defined:\n",
+    "$$d_D(z) = \\min_{\\hat{z}\\in D} d(z,\\hat{z})$$\n",
+    "which indirectly characterize the constitutive relation."
    ]
   },
   {
@@ -277,6 +319,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "577c8b6f",
+   "metadata": {},
+   "source": [
+    "The solution can then be obtained by minimizing the constitutive distance along the equilibrium manifold:\n",
+    "$$z = \\arg\\min_{z \\in E} d_D(z)$$\n",
+    "Note that there may be local minima (due to noisy data)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "79097980",
@@ -307,6 +359,14 @@
     "pl.figure()\n",
     "e = np.linspace(0,0.01,num=100)\n",
     "pl.plot(e,distance_dd(e,K*(eps_bar-e)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec6fd45c",
+   "metadata": {},
+   "source": [
+    "### Constitutive likelihood"
    ]
   },
   {
